--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -224,5 +224,5 @@
 {% endblock content %}
 
 {% block contact %}
-    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="fas fa-question"></i> Did not find an answer to your question? Contact us!</a>
+    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="fas fa-envelope"></i> Did not find an answer to your question? Contact us!</a>
 {% endblock contact %}
