--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -59,7 +59,7 @@
 
             <section class="step-feature">
                 <div class="step-feature-image">
-                    <img src="{{ asset('images/step-slack.png') }}" alt="Connect to Your Application">
+                    <img src="{{ asset('images/step-connect.png') }}" alt="Connect to Your Application">
                 </div>
                 <div class="step-feature-text">
                     <h3>1. Connect to Your Application</h3>
