--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -123,9 +123,9 @@
                             <a href="#big-team">Will the app work with team larger than 500 people?</a>
                         </h3>
                         <p>
-                            There is a 2 things to understand here. The first step in our application is to retrieve
-                            all the users on your Slack workspace / Discord server / Zoom.us Chat - yes we retrieve
-                            all the users to allow you to select the ones that will participate to your Secret Santa.
+                            The first step in our application is to retrieve all the users on your Slack workspace
+                            / Discord server / Zoom.us Chat - yes we retrieve all the users to allow you to select the
+                            ones that will participate to your Secret Santa.
                         </p>
                         <p>
                             When your team is really big, Slack, Discord or Zoom.us APIs can fail to send us all the users in a
@@ -136,7 +136,7 @@
                         <p>
                             The second step is to dispatch a private message to all the selected users. Even if you started
                             a Secret Santa with a lot of participants, the application will send all the messages progressively.
-                            So there should not be any problem here.
+                            So there should not be any at this step.
                         </p>
                     </li>
                 </ul>
