--- a/templates/santa/send_messages.html.twig
+++ b/templates/santa/send_messages.html.twig
@@ -1,5 +1,7 @@
 {% extends 'santa/base.html.twig' %}
 
+{% set step = 3 %}
+
 {% block santa_content %}
     <div class="content send-messages is-center">
         <h2>
