--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -1,5 +1,7 @@
 {% extends 'santa/base.html.twig' %}
 
+{% set step = 4 %}
+
 {% block santa_content %}
     <div class="content result-block">
         {% if secretSanta.isDone %}
