Fix js on message step

--- a/templates/santa/message.html.twig
+++ b/templates/santa/message.html.twig
@@ -106,6 +106,7 @@
        */
       let secretSantaFormSubmitted = false;
       const runForm = document.getElementById('run_form');
+      const submitButton = document.getElementById('submit-button');
 
       /**
        * Prevent the multi-submit of the form
